<resources>
    <string name="app_name">MusicApplication</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="sign_up_text">"<u>"Sign Up"</u>"</string>
    <string name="edit_password">Password</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="problem_with_entry">Email or password is not correct!</string>
    <string name="ok">OK</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="fields_is_empty">Fields is empty!</string>
    <string name="email">Email</string>
    <string name="search_hint">Write artist or track name for search</string>
    <string name="nothing_found">Nothing found</string>
    <string name="biography_not_exist">We not found artist biography</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_is_empty">Playlist is empty</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="playcount">Playcount</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>
